Fixed code boxes in help view horizontal overflow

--- a/help-style.css
+++ b/help-style.css
@@ -19,5 +19,6 @@ code {
     padding: 8px;
     margin-left: 0px;
     font-size: 15px;
+    overflow-y: auto;
 }
 
